# Task2

./: CMakeLists.txt  Makefile
src/: calculator.cpp  main.cpp
